[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
fnv = { version = "1.0.7", features = [] }
rand = "0.8.5"
regex = { version = "1.10.2", features = [] }

[profile.bench]
lto = true
